packages/components/src/components/mobile-drawer/mobile-drawer.scss
/* @define dc-mobile-drawer; weak */
@keyframes openDrawer {
    0% {
        transform: translateX(-100%);
    }
    60%,
    100% {
        transform: translateX(0);
    }
    80% {
        transform: translateX(-5%);
    }
}

@keyframes openRtlDrawer {
    0% {
        transform: translateX(100%);
    }
    60%,
    100% {
        transform: translateX(0);
    }
    80% {
        transform: translateX(5%);
    }
}

@keyframes closeDrawer {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-100%);
    }
}

@keyframes closeRtlDrawer {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(100%);
    }
}

.dc-mobile-drawer {
    position: absolute;
    top: 0;
    left: 0;
    will-change: transform;
    transform: translateX(-100%);
    animation-name: openDrawer;
    @include rtl {
        animation-name: openRtlDrawer;
    }
    animation-duration: 0.4s;
    animation-fill-mode: forwards;
    z-index: 10000;

    &__container {
        display: flex;
        flex-direction: column;
        position: relative;
        overflow: hidden;
        background-color: var(--color-surface-primary);
        box-shadow:
            0 16px 16px 0 var(--color-shadow-medium),
            0 0 16px 0 var(--color-shadow-medium);
    }

    &-header {
        &__title--pre-appstore {
            display: flex;
            justify-content: space-between;
        }
    }

    &__header {
        display: flex;
        width: 100%;
        height: 50px;
        z-index: 4;
        line-height: 24px;
        align-items: center;
        border-bottom: 1px solid var(--color-surface-border);

        &--right {
            flex-direction: row-reverse;
        }
        &-title {
            padding: 1.2rem 1.6rem;
            height: 40px;
            width: 100%;
            display: flex;
            align-items: center;
            border-left: 1px solid var(--color-surface-border);
        }
        &-section {
            flex-grow: 1;
            padding: 1.6rem;
            line-height: 24px;
            display: flex;
            align-items: center;
        }
        &-close {
            display: flex;
            align-items: center;
            cursor: pointer;
            padding: 0.6rem 1.2rem;
            @extend %inline-icon-white;
            height: inherit;
            width: 40px;
        }
        &-wrapper {
            display: flex;
            width: 100%;
            justify-content: space-between;
            transition: all 0.2s;
        }
    }
    &__subheader {
        display: flex;
        height: 72px;
        min-height: 72px;
        border-bottom: 1px solid var(--color-surface-border);
        justify-content: center;
        align-items: center;
        margin-bottom: 1.8rem;
        position: absolute;
        width: 100%;
        background: var(--color-surface-primary);
        z-index: 1;

        &--hidden {
            visibility: hidden;
        }
    }

    &__submenu {
        &-back {
            width: 16px;
            height: 16px;
            margin-right: 16px;
            @include rtl {
                rotate: 180deg;
            }
        }
        &-toggle {
            display: flex;
            height: 5.6rem;
            padding: 0 1.6rem 0 4.8rem;
            align-items: center;

            &--hidden {
                visibility: hidden;
                height: 0;
                padding: 0;
            }

            &-icon {
                width: 16px;
                height: 16px;
                margin-right: 16px;
            }
            &-suffix-icon {
                width: 16px;
                height: 16px;
                margin-left: auto;
                @include rtl {
                    rotate: 180deg;
                }
            }
        }
        &-list {
            background: var(--color-surface-primary);
            position: absolute;
            z-index: 2;
            transition: transform 0.25s cubic-bezier(0.25, 0.1, 0.1, 0.25);
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            overflow: auto;
            &:has(.settings-language__language-container) {
                z-index: 7;
            }

            &--enter,
            &--exit {
                transform: translateX(-100%);
                opacity: 0;
                pointer-events: none;
            }
            &--enter-done {
                transform: translateX(0);
                opacity: 1;
                pointer-events: auto;
            }
            &--has-subheader {
                height: 100%;
            }
            &-title {
                display: flex;
                padding: 2rem 0 3.2rem 3.2rem;
                align-items: center;
            }
        }
    }
    &__submenu-section {
        display: flex;
        padding-left: 5.6rem;
        padding-bottom: 3.2rem;
        flex-direction: column;

        &-title {
            display: flex;
            align-items: center;

            &-text {
                padding-left: 1.6rem;
            }
        }
        &-content {
            padding-left: 4.8rem;

            .header__menu-mobile-link {
                padding-top: 1.6rem;
            }
            .header__menu-mobile-link--disabled {
                opacity: 0.32;
                pointer-events: none;
            }
        }
    }
    &__body {
        font-size: 1.4rem;
        height: 100%;
        line-height: 1.5;
        color: var(--color-text-primary);
        overflow-y: auto;
        overflow-x: hidden;

        &.no-padding {
            padding-top: 0;
        }

        &.tradershub-os-header {
            padding-top: 2.4rem;
        }
    }
    &__item {
        padding: 0 1.6rem 0 4.8rem;
        font-size: 1.4rem;
        line-height: 1.5;
        height: 5.6rem;
        color: var(--color-text-primary);
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }
    &__footer {
        display: flex;
        height: 36px;
        z-index: 4;
        border-top: 1px solid var(--color-surface-border);
        justify-content: center;
        align-items: center;
        padding: 0 1.6rem;

        &--servertime {
            justify-content: start;
            align-items: center;
            border-top: 1px solid var(--color-surface-border);
            color: var(--color-text-primary);
        }
    }
    &__overlay {
        z-index: 9999 !important;
        background-color: var(--color-modal-backdrop) !important;
    }
    &.exit {
        animation: closeDrawer 0.3s;
        @include rtl {
            animation: closeRtlDrawer 0.3s;
        }
    }
}

